--- a/public/index.html
+++ b/public/index.html
@@ -1,160 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>MCS Bot Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>MCS Bot Dashboard</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial;
+  background: #313338;
+  color: #dcddde;
+}
 
-    header {
-      background: #020617;
-      padding: 15px 20px;
-      font-size: 20px;
-      font-weight: bold;
-      border-bottom: 1px solid #1e293b;
-    }
+header {
+  padding: 12px;
+  background: #1e1f22;
+  font-weight: bold;
+}
 
-    .container {
-      display: grid;
-      grid-template-columns: 300px 1fr;
-      height: calc(100vh - 60px);
-    }
+.container {
+  display: grid;
+  grid-template-columns: 260px 1fr;
+  height: calc(100vh - 45px);
+}
 
-    .sidebar {
-      border-right: 1px solid #1e293b;
-      padding: 15px;
-      background: #020617;
-    }
+.sidebar {
+  background: #2b2d31;
+  padding: 12px;
+}
 
-    select,
-    textarea,
-    button,
-    input[type="color"] {
-      width: 100%;
-      margin-top: 8px;
-      padding: 8px;
-      background: #020617;
-      color: #e5e7eb;
-      border: 1px solid #1e293b;
-      border-radius: 4px;
-    }
+select, textarea, button, input {
+  width: 100%;
+  margin-top: 8px;
+  padding: 8px;
+  background: #1e1f22;
+  color: white;
+  border: none;
+}
 
-    label {
-      font-size: 13px;
-      margin-top: 15px;
-      display: block;
-      color: #94a3b8;
-    }
+.main {
+  display: flex;
+  flex-direction: column;
+}
 
-    button {
-      background: #2563eb;
-      cursor: pointer;
-      margin-top: 12px;
-      font-weight: bold;
-      border: none;
-    }
+#chatBox {
+  flex: 1;
+  overflow-y: auto;
+  padding: 12px;
+}
 
-    button:hover {
-      background: #1d4ed8;
-    }
+.message {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 14px;
+}
 
-    .main {
-      display: flex;
-      flex-direction: column;
-    }
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 
-    /* MESSAGE VIEWER */
-    #chatBox {
-      flex: 1;
-      padding: 15px;
-      overflow-y: auto;
-      background: #0f172a;
-    }
+.author {
+  font-weight: bold;
+}
 
-    .message {
-      margin-bottom: 10px;
-      padding-bottom: 6px;
-      border-bottom: 1px solid #1e293b;
-    }
+.time {
+  font-size: 11px;
+  color: #aaa;
+  margin-left: 6px;
+}
 
-    .author {
-      font-weight: bold;
-      color: #60a5fa;
-    }
+.reactions {
+  font-size: 13px;
+  color: #b5bac1;
+}
 
-    .time {
-      font-size: 11px;
-      color: #94a3b8;
-      margin-left: 6px;
-    }
+.sendBox {
+  padding: 10px;
+  border-top: 1px solid #1e1f22;
+}
 
-    .sendBox {
-      border-top: 1px solid #1e293b;
-      padding: 15px;
-      background: #020617;
-    }
-  </style>
+#typing {
+  font-size: 12px;
+  color: #aaa;
+  display: none;
+}
+</style>
 </head>
 
 <body>
 
-<header>
-  MCS Discord Bot Dashboard
-</header>
+<header>MCS Discord Dashboard</header>
 
 <div class="container">
 
-  <!-- SIDEBAR -->
-  <div class="sidebar">
-    <label>Server</label>
-    <select id="guild"></select>
+<div class="sidebar">
+  <label>Server</label>
+  <select id="guild"></select>
 
-    <label>Channel</label>
-    <select id="channel"></select>
+  <label>Channel</label>
+  <select id="channel"></select>
 
-    <label>
-      <input type="checkbox" id="embed" />
-      Send as Embed
-    </label>
+  <label><input type="checkbox" id="embed"> Send as Embed</label>
+  <input type="color" id="color" value="#5865F2">
+</div>
 
-    <label>Embed Color</label>
-    <input type="color" id="color" value="#5865F2" />
+<div class="main">
+  <div id="chatBox"></div>
+
+  <div class="sendBox">
+    <div id="typing">Bot is typing...</div>
+    <textarea id="message" rows="2"></textarea>
+    <button onclick="sendMessage()">Send</button>
   </div>
-
-  <!-- MAIN -->
-  <div class="main">
-
-    <!-- MESSAGE VIEW -->
-    <div id="chatBox">
-      <div style="color:#94a3b8;">
-        Select a server and channel to load messages.
-      </div>
-    </div>
-
-    <!-- SEND MESSAGE -->
-    <div class="sendBox">
-      <textarea
-        id="message"
-        rows="3"
-        placeholder="Type message to send as the bot..."
-      ></textarea>
-
-      <button onclick="sendMessage()">Send Message</button>
-    </div>
-
-  </div>
+</div>
 
 </div>
 
-<!-- SCRIPT -->
 <script src="script.js"></script>
-
 </body>
 </html>
