--- a/public/index.html
+++ b/public/index.html
@@ -1,123 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>MCS Bot Dashboard</title>
+  <meta charset="UTF-8" />
+  <title>MCS Bot Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-body {
-  margin: 0;
-  font-family: Arial;
-  background: #313338;
-  color: #dcddde;
-}
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #0f172a;
+      color: #e5e7eb;
+    }
 
-header {
-  padding: 12px;
-  background: #1e1f22;
-  font-weight: bold;
-}
+    header {
+      background: #020617;
+      padding: 15px 20px;
+      font-size: 20px;
+      font-weight: bold;
+      border-bottom: 1px solid #1e293b;
+    }
 
-.container {
-  display: grid;
-  grid-template-columns: 260px 1fr;
-  height: calc(100vh - 45px);
-}
+    .container {
+      display: grid;
+      grid-template-columns: 280px 1fr;
+      height: calc(100vh - 60px);
+    }
 
-.sidebar {
-  background: #2b2d31;
-  padding: 12px;
-}
+    /* SIDEBAR */
+    .sidebar {
+      border-right: 1px solid #1e293b;
+      padding: 15px;
+      background: #020617;
+    }
 
-select, textarea, button, input {
-  width: 100%;
-  margin-top: 8px;
-  padding: 8px;
-  background: #1e1f22;
-  color: white;
-  border: none;
-}
+    label {
+      font-size: 13px;
+      margin-top: 15px;
+      display: block;
+      color: #94a3b8;
+    }
 
-.main {
-  display: flex;
-  flex-direction: column;
-}
+    select, textarea, button, input[type="color"] {
+      width: 100%;
+      margin-top: 8px;
+      padding: 8px;
+      background: #020617;
+      color: #e5e7eb;
+      border: 1px solid #1e293b;
+      border-radius: 4px;
+    }
 
-#chatBox {
-  flex: 1;
-  overflow-y: auto;
-  padding: 12px;
-}
+    button {
+      background: #2563eb;
+      cursor: pointer;
+      margin-top: 12px;
+      font-weight: bold;
+      border: none;
+    }
 
-.message {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 14px;
-}
+    button:hover {
+      background: #1d4ed8;
+    }
 
-.avatar {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
+    /* MAIN */
+    .main {
+      display: flex;
+      flex-direction: column;
+    }
 
-.author {
-  font-weight: bold;
-}
+    /* CHAT BOX */
+    #chatBox {
+      flex: 1;
+      padding: 15px;
+      overflow-y: auto;
+      background: #0f172a;
+    }
 
-.time {
-  font-size: 11px;
-  color: #aaa;
-  margin-left: 6px;
-}
+    .message {
+      margin-bottom: 12px;
+      padding: 8px;
+      background: #020617;
+      border-radius: 6px;
+      border: 1px solid #1e293b;
+      font-size: 14px;
+    }
 
-.reactions {
-  font-size: 13px;
-  color: #b5bac1;
-}
+    .author {
+      font-weight: bold;
+      color: #60a5fa;
+    }
 
-.sendBox {
-  padding: 10px;
-  border-top: 1px solid #1e1f22;
-}
+    .time {
+      font-size: 11px;
+      color: #94a3b8;
+      margin-left: 6px;
+    }
 
-#typing {
-  font-size: 12px;
-  color: #aaa;
-  display: none;
-}
-</style>
+    /* SEND BOX */
+    .sendBox {
+      border-top: 1px solid #1e293b;
+      padding: 15px;
+      background: #020617;
+    }
+  </style>
 </head>
 
 <body>
 
-<header>MCS Discord Dashboard</header>
+<header>
+  MCS Discord Bot Dashboard
+</header>
 
 <div class="container">
 
-<div class="sidebar">
-  <label>Server</label>
-  <select id="guild"></select>
+  <!-- SIDEBAR -->
+  <div class="sidebar">
+    <label>Server</label>
+    <select id="guild"></select>
 
-  <label>Channel</label>
-  <select id="channel"></select>
+    <label>Channel</label>
+    <select id="channel"></select>
 
-  <label><input type="checkbox" id="embed"> Send as Embed</label>
-  <input type="color" id="color" value="#5865F2">
-</div>
+    <label>
+      <input type="checkbox" id="useEmbed" />
+      Send as Embed
+    </label>
 
-<div class="main">
-  <div id="chatBox"></div>
-
-  <div class="sendBox">
-    <div id="typing">Bot is typing...</div>
-    <textarea id="message" rows="2"></textarea>
-    <button onclick="sendMessage()">Send</button>
+    <label>Embed Color</label>
+    <input type="color" id="embedColor" value="#5865F2" />
   </div>
-</div>
+
+  <!-- MAIN -->
+  <div class="main">
+
+    <!-- CHAT -->
+    <div id="chatBox">
+      <div style="color:#94a3b8;">Select a server and channel to load messages.</div>
+    </div>
+
+    <!-- SEND -->
+    <div class="sendBox">
+      <textarea
+        id="message"
+        rows="3"
+        placeholder="Type message as the bot..."
+      ></textarea>
+      <button onclick="sendMessage()">Send Message</button>
+    </div>
+
+  </div>
 
 </div>
 
+<!-- SCRIPT -->
 <script src="script.js"></script>
+
+<script>
+  function sendMessage() {
+    const channelId = document.getElementById("channel").value;
+    const message = document.getElementById("message").value;
+    const embed = document.getElementById("useEmbed").checked;
+    const color = document.getElementById("embedColor").value;
+
+    if (!message.trim()) return;
+
+    fetch("/api/send", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        channelId,
+        message,
+        embed,
+        color
+      })
+    }).then(() => {
+      document.getElementById("message").value = "";
+      setTimeout(() => {
+        if (typeof loadMessages === "function") loadMessages();
+      }, 500);
+    });
+  }
+</script>
+
 </body>
 </html>
